# mcp-server-client

./: .dockerignore  .env.example  .gitignore  API_REFERENCE.md  CLIENT_GUIDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  MCP_TOOLS_REFERENCE.md  QUICK_START.md  README.md  TEST_EXAMPLES.md  alembic.ini  docker-compose.yml  dump 2.rdb  my_db_setup_file.sql  nohup.out  passwords.txt  pyproject.toml  requirements.txt  setup.sh  setup_check.py  start_api.sh  test_api.py  test_auth.py  test_e2e.py  test_email.py  things_i_want_to_address.txt  update_passwords.py
client/: cli.py  mcp_client.py
client/examples/: README.md  advanced_usage.py  basic_query.py  batch_queries.py  export_data.py  schedule_reports.py
docker/: nginx.conf
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  AppSimple.tsx  index.css
migrations/: env.py
server/: api_server.py  celery_app.py  database.py  init_db.py  mcp_server.py  recreate_table.py
server/auth/: __init__.py  auth_routes.py  authentication.py  permissions.py  query_validator.py  rbac.py
server/cache/: __init__.py  redis_cache.py
server/db/: __init__.py  connection.py  models.py
server/monitoring/: health.py  logging.py
server/query/: __init__.py  query_executor.py  sql_generator.py
server/scheduler/: __init__.py  email_sender.py  report_scheduler.py
server/tools/: __init__.py  chart_generator.py  exporters.py  history.py
shared/: __init__.py  config.py
tests/: conftest.py  test_cache.py  test_integration.py  test_models.py  test_validator.py
(+24 files in other folders)
